[package]
name = "nxt"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
# TODO: Write description
#description = ""
documentation = "https://docs.rs/nxt/"
repository = "https://github.com/jonas-schievink/nxt.git"
# TODO: Add up to 5 keywords
#keywords = []
# TODO: Add categories
#categories = []
readme = "README.md"
license = "CC0-1.0"


# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'nxt = "[a-z0-9\\.-]+"'
replace = 'nxt = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/nxt/[a-z0-9\\.-]+"
replace = "https://docs.rs/nxt/{{version}}"

[dependencies]
rnix = { git = "https://gitlab.com/jD91mZM2/rnix.git", rev = "ebb1232e" }
rowan = "0.1.3"
structopt = "0.2.13"
failure = "0.1.3"
log = "0.4.6"
env_logger = "0.6.0"
codemap = "0.1.1"
codemap-diagnostic = "0.1.0"
toolshed = "0.6.3"
typed-arena = "1.4.1"
directories = "1.0.2"
hashbrown = "0.1.6"
shawshank = "0.2.3"
num-traits = "0.2.6"
console = "0.7.0"
tendril = "0.4.0"

[dev-dependencies]
version-sync = "0.5"
